# movie-meilisearch

./: .env.sample  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: Plan.md  TASKS.md
docs/evidence/: REPORT.md
searxng/: settings.yml
seed/: books.json  movies.json
src/: api.rs  app.rs  lib.rs  main.rs
src/components/: facet_panel.rs  mod.rs  pagination.rs  result_card.rs  search_bar.rs  search_results.rs
src/model/: book.rs  mod.rs  movie.rs  search.rs  web_result.rs
src/pages/: detail.rs  home.rs  mod.rs  not_found.rs
src/server/: meilisearch.rs  mod.rs  searxng.rs  seed.rs
style/: main.scss
tests/: browser-verify.mjs
